feat: Agrega la página de gestión de cobros y pagos al dashboard e incluye configuraciones de VSCode.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "github.copilot.chat.commitMessageGeneration.instructions": "Escribe siempre los mensajes de commit en español.",
     "githubPullRequests.ignoredPullRequestBranches": [
         "main"
     ],
